--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Rubik+Dirt&family=Share+Tech+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -37,16 +37,16 @@
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Sobre mi</a>
+                        <a class="nav-link active" aria-current="page" href="#sobre-mi">Sobre mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Proyectos</a>
+                        <a class="nav-link" href="#proyectos">Proyectos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Testimoniales</a>
+                        <a class="nav-link" href="#testimoniales">Testimoniales</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -110,7 +110,7 @@
         </div>
     </section>
 
-    <section class="proyectos d-flex flex-column">
+    <section class="proyectos d-flex flex-column" id="proyectos">
         <h2 class="proyectos__titulo">Mis proyectos recientes</h2>
         <h3 class="proyectos__descripcion">Estos son algunos proyectos que he creado recientemente:</h3>
         <div class="proyectos__contenido container text-center">
@@ -248,44 +248,143 @@
     <section class="articulos justify-content-start">
         <h2 class="articulos__titulo">Artículos</h2>
         <div class="card">
-          <div class="card-header">
-            Más recientes
-          </div>
-          <ul class="list-group list-group-flush">
-            <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-              <li class="list-group-item">
-                El decorador @property en Python - cómo usarlo, ventajas y sintaxis
-              </li>
-            </a>
-            <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-              <li class="list-group-item">
-                Python tutorial ciclos while - while True ejemplos de sintaxis y ciclos infinitos
-              </li>
-            </a>
-            <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-              <li class="list-group-item">
-                Python leer archivo JSON - cómo cargar JSON desde un archivo y procesar dumps
-              </li>
-            </a>
-            <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-              <li class="list-group-item">
-                Python cómo escribir en un archivo - abrir, leer, escribir y otras funciones de archivos explicadas
-              </li>
-            </a>
-            <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-              <li class="list-group-item">
-                ¿Para qué se usa Python? 10+ usos del lenguaje de programación Python
-              </li>
-            </a>
+            <div class="card-header">
+                Más recientes
+            </div>
+            <ul class="list-group list-group-flush">
+                <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+                    <li class="list-group-item">
+                        El decorador @property en Python - cómo usarlo, ventajas y sintaxis
+                    </li>
+                </a>
+                <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+                    <li class="list-group-item">
+                        Python tutorial ciclos while - while True ejemplos de sintaxis y ciclos infinitos
+                    </li>
+                </a>
+                <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+                    <li class="list-group-item">
+                        Python leer archivo JSON - cómo cargar JSON desde un archivo y procesar dumps
+                    </li>
+                </a>
+                <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+                    <li class="list-group-item">
+                        Python cómo escribir en un archivo - abrir, leer, escribir y otras funciones de archivos explicadas
+                    </li>
+                </a>
+                <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
+                    <li class="list-group-item">
+                        ¿Para qué se usa Python? 10+ usos del lenguaje de programación Python
+                    </li>
+                </a>
           </ul>
         </div>
         <a href="https://www.freecodecamp.org/espanol/news/" target="_blank" rel="noopener noreferrer">
-          <button type="button" class="articulos__boton btn btn-info">
-            Ver más artículos
-            <i class="bi bi-arrow-right-circle-fill"></i>
-          </button>
+            <button type="button" class="articulos__boton btn btn-info">
+                Ver más artículos
+                <i class="bi bi-arrow-right-circle-fill"></i>
+            </button>
         </a>
-      </section>
+    </section>
+
+    <section class="testimoniales" id="testimoniales">
+        <h2 class="testimoniales__titulo">Testimoniales</h2>
+        <h3 class="testimoniales__descripcion">Estos son algunos testimoniales de mis clientes:</h3>
+        <div id="carouselTestimoniales" class=" carousel-dark carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselTestimoniales" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselTestimoniales" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselTestimoniales" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="testimonial container">
+                        <img src="/build/img/cliente1.svg" alt="Imagen cliente 1" class="testimonial__imagen rounded-circle">
+                        <p class="testimonial__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat corporis quam laborum fugiat architecto aut porro. Libero laudantium repellendus</p>
+                        <div class="testimonial__cliente">
+                            <p class="testimonial__nombre">Gino</p>
+                            <p class="testimonial__cargo">Gerente de proyectos en Desarrollo Web</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="testimonial container">
+                        <img src="/build/img/cliente2.svg" alt="Imagen cliente 2" class="testimonial__imagen rounded-circle">
+                        <p class="testimonial__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat corporis quam laborum fugiat architecto aut porro. Libero laudantium repellendus</p>
+                        <div class="testimonial__cliente">
+                            <p class="testimonial__nombre">Nora</p>
+                            <p class="testimonial__cargo">Gerente de DiseñaMiPáginaWeb</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="testimonial container">
+                        <img src="/build/img/cliente3.svg" alt="Imagen cliente 3" class="testimonial__imagen rounded-circle">
+                        <p class="testimonial__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat corporis quam laborum fugiat architecto aut porro. Libero laudantium repellendus</p>
+                        <div class="testimonial__cliente">
+                            <p class="testimonial__nombre">Leornado</p>
+                            <p class="testimonial__cargo">Director de AprendeAProgramar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimoniales" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimoniales" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+    </section>
+
+    <section class="contacto" id="contacto">
+        <div class="contacto__contenedor container">
+            <div class="contacto__rectangulo container text-center d-flex justify-content-evenly">
+                <div class="row">
+                    <div class="contacto__contenido-titulo col-12 col-md-4">
+                        <h1 class="contacto__titulo">¡Hablemos!</h1>
+                    </div>
+                    <div class="contacto__contenido-descripcion col-12 col-md-4">
+                        <p class="contacto__descripcion">Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.</p>
+                    </div>
+                    <div class="contacto__contenido-boton col-12 col-md-4">
+                        <a href="mailto:ejemplo@correo.com">
+                            <button type="button" class="contacto__boton">  
+                                Contacto
+                                <i class="bi bi-envelope-check-fill"></i>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer d-flex flex-column align-items-center justify-content-center">
+        <img src="/build/img/icono-blanco.svg" alt="Imagen logo blanco" class="footer__logo">
+        <p class="footer__texto text-center">Aprendo y creo todos los días.<span>Creemos un proyecto juntos.</span></p>
+        <div class="footer__iconos-redes d-flex flex-wrap align-items-center justify-content-center">
+            <a href="https://twitter.com/freecodecampES" class="footer__icono" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-twitter"></i>
+            </a>
+            <a href="https://github.com/freeCodeCamp/freeCodeCamp" class="footer__icono" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="footer__icono" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/freecodecamp/" class="footer__icono" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-instagram"></i>
+            </a>
+            <a href="mailto:janedoe@micorreo.com" class="footer__icono" target="_blank" rel="noopener noreferrer">
+                <i class="bi bi-envelope"></i>
+            </a>
+        </div>
+        <p class="footer__copyright">Creado por Fernando - Todos los derechos reservados &#169; (2023)</p>
+    </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   </body>
 </html>
